<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="25dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#444444"
        >

        <TextView
            android:id="@+id/carMileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_car_mileage"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            />

        <EditText
            android:id="@+id/nCarMileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:hint="@string/newCarMileage"
            android:inputType="number"
            android:textColor="#ababab"
            android:textColorHint="#ababab"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" tools:targetApi="o"/>
        <Button
            android:id="@+id/editMileageID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/editMileageBu"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>

</android.support.v7.widget.CardView>

