<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="63dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/carImageDet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="660dp"
            android:contentDescription="@string/todo"
            android:cropToPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="4" />

        <TextView
            android:id="@+id/carManufDet"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/carManufact"
            android:textSize="14sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carImageDet"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/carNameDet"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:hint="carName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.965"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/carManufDet"
            app:layout_constraintTop_toBottomOf="@+id/carImageDet" />

        <TextView
            android:id="@+id/carDOBDet"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="TextView"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="@+id/carNameDet"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/carPlateDet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/carPlate"
            app:layout_constraintBottom_toTopOf="@+id/mileage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carManufDet"
            app:layout_constraintVertical_bias="0.294" />

        <TextView
            android:id="@+id/mileage"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:text="Mileage"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/carManufDet"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carManufDet"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/setMileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="228dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:onClick="setMileageBu"
            android:text="@string/updateMileage"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/mileage"
            app:layout_constraintTop_toBottomOf="@+id/carDOBDet"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/oilChangeBu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="216dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:onClick="setOilChangeDate"
            android:text="@string/oilChangeBU"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/oilChangeID"
            app:layout_constraintTop_toBottomOf="@+id/setMileage"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/oilChangeID"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/oilChangeText"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/setMileage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mileage"
            app:layout_constraintVertical_weight="1" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
