<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="25dp">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/carImage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:cropToPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.016"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/carManuf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp"
            android:text="@string/carManufact"
            app:layout_constraintBottom_toTopOf="@+id/carName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/carImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/carName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/carManuf"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp"
            android:text="@string/carName"
            app:layout_constraintBottom_toTopOf="@+id/carPlate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/carImage" />

        <TextView
            android:id="@+id/carPlate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/carName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp"
            android:text="@string/carPlate"
            app:layout_constraintBottom_toTopOf="@+id/carDOB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/carImage" />

        <TextView
            android:id="@+id/carDOB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/carName"
            android:layout_alignParentStart="true"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp"
            android:text="@string/carModel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editCarID"
            app:layout_constraintStart_toEndOf="@+id/carImage" />


        <Button
            android:id="@+id/editCarID"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@android:drawable/ic_menu_edit"
            app:layout_constraintEnd_toStartOf="@+id/deleteCarID"
            app:layout_constraintTop_toBottomOf="@+id/carPlate" />

        <Button
            android:id="@+id/deleteCarID"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editCarID" />


    </android.support.constraint.ConstraintLayout>
</android.support.design.card.MaterialCardView>